Add JDK21 preview + fix test